--- a/index.html
+++ b/index.html
@@ -176,18 +176,32 @@ a {
     flex-direction:column;
 }
 
-.home > .title {
+.home  .title {
     margin-bottom:40px;
     font-size:3.5rem;
     padding:0px 16px;
 }
 
-.home > .subtitle {
+.home  .subtitle {
     font-size:1.5rem;
     padding:0px 16px;
+    margin-bottom:40px;
 }
 
-.home > .logo {
+.home  .logo {
     max-width:90%;
     margin-bottom:40px;
-}</style><main class="home"><img class="logo" src="/images/elm-france-logo.svg"><h1 class="title">Elm France</h1><p class="subtitle">Vous souhaitez participer à des évènements autour du langage Elm ? Apprendre et rencontrer des personnes partageant la même passion ?</p></main></div></main></body></html>
+}
+
+.home  .mailchimpForm {
+    padding:24px;
+    background-color:#5A6378;
+}
+
+.home  .error {
+    color:#F0AD00;
+}
+
+.home  .success {
+    color:#5A6378;
+}</style><main class="home"><img class="logo" src="/images/elm-france-logo.svg"><h1 class="title">Elm France</h1><p class="subtitle">Vous souhaitez participer à des évènements autour du langage Elm ? Apprendre et rencontrer des personnes partageant la même passion ?</p><div class="mailchimpForm"><form id="mailchimp-form" action="https://gmail.us3.list-manage.com/subscribe/post-json?u=9398c39f75ed42968f2d53e9c&amp;amp;id=f4d9c246e8&amp;c=jsonpCallback" accept-charset="UTF-8" method="POST" enctype="multipart/form-data"><label for="mailchimp-email">Votre email</label><input id="mailchimp-email" type="email" name="EMAIL" tabindex="-1"><input type="hidden" name="b_9398c39f75ed42968f2d53e9c_f4d9c246e8" tabindex="-1"><input type="submit" value="S'abonner à nos évènements"></form></div></main></div></main></body></html>
