--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@ a {
     background-color:#5A6378;
     display:flex;
     flex-direction:column;
-    justify-content:space-around;
+    width:100%;
+    align-items:center;
 }
 
 .home  .error {
