deploy: ba97fb0c43f8b3ecb3226b8ea7ab5e31d8e20445

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ a {
 
 .home  .mailchimpForm {
     padding:24px;
-    background-color:#F0AD00;
+    background-color:#1293d8;
     display:flex;
     flex-direction:column;
     justify-content:space-between;
@@ -284,21 +284,21 @@ a {
     font-size:1.5rem;
 }
 
-.home  .error {
-    color:#F0AD00;
+.home  .mailchimpForm p.error {
+    color:rgb(255, 255, 255);
 }
 
-.home  .success {
-    color:#1293d8;
+.home  .mailchimpForm p.success {
+    color:rgb(255, 255, 255);
 }
 
 .home  .button {
     margin:24px;
     padding:16px;
-    background-color:#1293d8;
+    background-color:#F0AD00;
     border-radius:8px;
-    border-color:#1293d8;
-    color:rgb(255, 255, 255);
+    border-color:#F0AD00;
+    color:#2B4053;
     font-size:1.5rem;
 }
 
