--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ a {
     margin:24px 0px;
     padding:16px;
     border-radius:8px 0 0 8px;
-    border:2px solid #F0AD00;
+    border:2px solid rgb(240, 173, 0);
     color:#2B4053;
     font-size:1.5rem;
 }
@@ -341,12 +341,16 @@ a {
 .home  .button {
     margin:24px 0px;
     padding:16px;
-    background-color:#F0AD00;
+    background-color:rgb(240, 173, 0);
     border-radius:0 8px 8px 0;
-    border:2px solid #F0AD00;
+    border:2px solid rgb(240, 173, 0);
     color:#2B4053;
     font-size:1.5rem;
     cursor:pointer;
+}
+
+.home  .button:hover {
+    background-color:rgb(233, 170, 5);
 }
 
 @media only screen and (max-width: 768px) {
