deploy: 17dd2bd90ff1a723206d2d0aa98c2eacf44208eb

--- a/index.html
+++ b/index.html
@@ -329,6 +329,11 @@ a {
     font-size:1.5rem;
 }
 
+.home  .emailInput:focus {
+    border-radius:8px 0 0 8px;
+    border:4px solid rgb(240, 173, 0);
+}
+
 @media only screen and (max-width: 768px) {
     .home  .emailInput {
         border-radius:8px 8px 0 0;
