--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@ a {
 }
 
 .home  .emailInput:focus {
-    border-radius:8px 0 0 8px;
-    border:4px solid rgb(240, 173, 0);
+    box-shadow:0px 0px 8px rgb(233, 170, 5);
+    outline:0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -352,6 +352,11 @@ a {
     color:#2B4053;
     font-size:1.5rem;
     cursor:pointer;
+}
+
+.home  .button:focus {
+    box-shadow:0px 0px 8px rgb(233, 170, 5);
+    outline:0;
 }
 
 .home  .button:hover {
